modified:   README.md 	modified:   css/styles.css 	modified:   index.html 	img/ 	pantallaProductos.html

--- a/index.html
+++ b/index.html
@@ -5,30 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TP Integrador</title>
     <link rel="stylesheet" href="css\styles.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=BBH+Sans+Bartle&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-    <h1>NombreEmpresa!</h1>
         <nav>
-            <ul>
-                <li>Inicio</li>
-                <li>Comprar</li>
-                <li>Sobre nosotros</li>
-            </ul>
+            <div id="div-nav">
+                
+                <div id="div-titulo-e-imagen">
+                    <span id="logo"><a href="index.html"><img src="img/logo.png" alt=""></a></span>
+                    <a href="index.html"><h1>PixelDisk!</h1></a>
+                </div>
+
+                <div id="div-ul-li">
+                    <ul>
+                        <li>Inicio</li>
+                        <li>Productos</li>
+                        <li>Sobre nosotros</li>
+                    </ul>
+                </div>
+            </div>
+   
+           
         </nav>
     </header>
     <main>
-        <section id="home">
-            <h2>Welcome</h2>
-            <p>This is the main page for your TP Integrador project.</p>
-        </section>
-        <section id="about">
-            <h2>About</h2>
-            <p>Details about the project and its purpose.</p>
-        </section>
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>Contact information or form.</p>
+        <section id="sect-titulo-central">    
+            <h1 id="titulo-central">PixelDisk</h1>
+            <span id="parrafo-titulo-central"><p>Lo mejor para tus licencias.</p></span>
+            <span id="input-central"><input type="text"></span>
+            <span id="boton-ingresar"><button>Ingresar</button></span>
         </section>
     </main>
     <footer>
