--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <section id="sect-titulo-central">    
             <h1 id="titulo-central">PixelDisk</h1>
             <span id="parrafo-titulo-central"><p>Lo mejor para tus licencias.</p></span>
+            <span id="parrafo-titulo-ingresa-nombre"><p>Ingresa tu nombre para continuar</p></span>
             <span id="input-central"><input type="text"></span>
             <span id="boton-ingresar"><button>Ingresar</button></span>
         </section>
