modified:   css/styles.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </header>
     <main>
         <section id="sect-titulo-central">    
-            <h1 id="titulo-central">PixelDisk</h1>
+            <h1 id="titulo-central">Pixel<span id="span-titulo-disk">Disk</span></h1>
             <span id="parrafo-titulo-central"><p>Lo mejor para tus licencias.</p></span>
             <span id="parrafo-titulo-ingresa-nombre"><p>Ingresa tu nombre para continuar</p></span>
             <span id="input-central"><input type="text"></span>
