modified:   css/styles.css 	modified:   index.html 	new file:   js/main.js

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TP Integrador</title>
     <link rel="stylesheet" href="css\styles.css">
-
+    <script src="js/main.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=BBH+Sans+Bartle&display=swap" rel="stylesheet">
@@ -22,9 +22,9 @@
 
                 <div id="div-ul-li">
                     <ul>
-                        <li>Inicio</li>
-                        <li>Productos</li>
-                        <li>Sobre nosotros</li>
+                        <a href=""><li>Inicio</li></a>
+                        <a href=""><li>Productos</li></a>
+                        <a href=""><li>Sobre nosotros</li></a>
                     </ul>
                 </div>
             </div>
@@ -37,10 +37,21 @@
             <h1 id="titulo-central">Pixel<span id="span-titulo-disk">Disk</span></h1>
             <span id="parrafo-titulo-central"><p>Lo mejor para tus licencias.</p></span>
             <span id="parrafo-titulo-ingresa-nombre"><p>Ingresa tu nombre para continuar</p></span>
-            <span id="input-central"><input type="text"></span>
-            <span id="boton-ingresar"><button>Ingresar</button></span>
+            <span id="input-central"><input type="text" id="input-nombre"></span>
+            <span id="span-boton-ingresar"><button id="boton-ingresar"  onclick="ingresarNombre()">Ingresar</button></span>
         </section>
-    </main>
+
+        <section id="sect-sobre-nosotros">    
+            <h2 id="titulo-sobre-nosotros">¿Quienes somos?</h2>
+            <span id="span-sobre-nosotros-parrafo"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus quae at enim sint nisi, quis minima odio cupiditate natus vitae veritatis quas dolore et itaque quaerat adipisci perspiciatis ea? Consectetur.</p></span>
+        </section>
+        
+        <section id="sect-como-comprar">    
+            <h2 id="titulo-como-comprar">¿Como comprar?</h2>
+            <span id="span-parrafo-como-comprar"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus quae at enim sint nisi, quis minima odio cupiditate natus vitae veritatis quas dolore et itaque quaerat adipisci perspiciatis ea? Consectetur.</p></span>
+        </section>
+
+    </main> 
     <footer>
         <p>&copy; 2025 Bianucci & De Bella.</p>
     </footer>
