--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 <div id="div-ul-li">
                     <ul>
                         <li><a href="#inicio">Inicio</a></li>
-                        <li><a href="#productos">Productos</a></li>
                         <li><a href="#titulo-sobre-nosotros">Sobre nosotros</a></li>
+                        <li><a href="testLogin.html"><img src="img\avatar.png" alt=""></a></li>
                     </ul>
                 </div>
 
@@ -39,8 +39,8 @@
                  <div id="menu-links">
                     <ul>
                         <li><a href="#inicio">Inicio</a></li>
-                        <li><a href="#productos">Productos</a></li>
                         <li><a href="#titulo-sobre-nosotros">Sobre nosotros</a></li>
+                        <li><a href="testLogin.html"><img src="img\avatar.png" alt=""></a></li>
                     </ul>
                 </div>
             </div>
