modified:   css/styles.css 	modified:   index.html 	modified:   js/main.js 	modified:   productos.html

--- a/productos.html
+++ b/productos.html
@@ -48,8 +48,12 @@
     </header>
     
     <main>
-        <section>
-                
+        <section id="sect-login">
+            <h1>Bienvenido</h1>
+            <p>Ingresar usuario y contraseña</p>
+            <span id="input-central"><input type="text" id="input-nombre"></span>
+            <span id="input-central"><input type="text" id="input-nombre"></span>
+            <button>Ingresar</button>
         </section>
     </main> 
     <footer>
