--- a/tpIntegradorFront/index.html
+++ b/tpIntegradorFront/index.html
@@ -30,7 +30,7 @@
                 <!-- Menú escritorio -->
                 <div id="div-ul-li">
                     <ul>
-                        <li><a href="#inicio">Inicio</a></li>
+                        <li><a href="index.html">Inicio</a></li>
                         <li><a href="#productos">Productos</a></li>
                         <li><a href="#sect-sobre-nosotros">Sobre nosotros</a></li>
                     </ul>
@@ -39,9 +39,9 @@
                 <!-- Menú móvil // Posibilidad de enganchar un boton que muestre el carrito, desplegable. -->
                  <div id="menu-links">
                     <ul>
-                        <li><a href="#inicio">Inicio</a></li>
+                        <li><a href="index.html">Inicio</a></li>
                         <li><a href="#productos">Productos</a></li>
-                        <li><a href="#titulo-sobre-nosotros">Sobre nosotros</a></li>
+                        <li><a href="#sect-sobre-nosotros">Sobre nosotros</a></li>
                     </ul>
                 </div>
             </div>
@@ -49,13 +49,42 @@
     </header>
     
     <main id="main-content">
-        <section id="sect-titulo-central"></section>
-
-        <section id="sect-sobre-nosotros"></section>
-
-        <section id="sect-como-comprar"></section>
-
         
+        <section id="sect-titulo-central">
+            <h1 id="titulo-central">
+                Pixel<span id="span-titulo-disk">Disk</span>
+            </h1>
+            <p id="parrafo-titulo-central">Lo mejor para tus licencias.</p>
+            <p id="parrafo-titulo-ingresa-nombre">Ingresa tu nombre para continuar</p>
+            <div id="div-form-nombre"> 
+                <form id="form-nombre">
+                    <input type="text" id="input-nombre" placeholder="Ingrese su nombre" required>
+                    <button type="submit" id="boton-ingresar">Ingresar</button>
+                </form>
+            </div> 
+        </section>
+
+        <section id="sect-sobre-nosotros">
+            <h2>¿Quienes somos?</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus quae at enim sint nisi, 
+                quis minima odio cupiditate natus vitae veritatis quas dolore et itaque quaerat adipisci perspiciatis ea? Consectetur.
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam molestias eius minus placeat. 
+                Aut possimus voluptates eius eum atque placeat eaque nam perspiciatis. Laboriosam quaerat 
+                reprehenderit deserunt soluta a iure?
+            </p>
+            <img src="" alt="Imagen sobre nosotros">
+        </section>
+
+        <section id="sect-como-comprar">
+            <h2 id="titulo-como-comprar">¿Como comprar?</h2>
+            <span id="span-parrafo-como-comprar"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus quae at enim sint nisi, quis minima odio cupiditate natus vitae veritatis quas dolore et itaque quaerat adipisci perspiciatis ea? Consectetur. 
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure quaerat deleniti distinctio tempore ut delectus qui maxime necessitatibus magni officiis, vero nemo quisquam, quam eligendi ratione eos aperiam soluta illum!
+            </p></span>
+        </section>
+
     </main> 
     <footer>
         <p>&copy; 2025 Bianucci & De Bella.</p>
