new file:   TpIntegrador-Bianucci-DeBella-DIV334 	deleted:    backend/package-lock.json 	deleted:    backend/src/package-lock.json 	modified:   css/styles.css 	modified:   index.html 	modified:   js/main.js 	modified:   tpIntegradorBack/package-lock.json 	modified:   tpIntegradorBack/package.json 	modified:   tpIntegradorBack/src/api/database/db.js 	new file:   tpIntegradorBack/src/api/database/server.js

--- a/index.html
+++ b/index.html
@@ -84,5 +84,5 @@
         <p>&copy; 2025 Bianucci & De Bella.</p>
     </footer>
 </body>
-<script src="js/main.js" defer></script>
+<script src="js/main.js"></script>
 </html>
