--- a/tpIntegradorFront/index.html
+++ b/tpIntegradorFront/index.html
@@ -53,7 +53,7 @@
             <span id="parrafo-titulo-central"><p>Lo mejor para tus licencias.</p></span>
             <span id="parrafo-titulo-ingresa-nombre"><p>Ingresa tu nombre para continuar</p></span>
             <span id="input-central"><input type="text" id="input-nombre"></span>
-            <span id="span-boton-ingresar"><button id="boton-ingresar"  onclick="ingresarNombre()">Ingresar</button></span>
+            <span id="span-boton-ingresar"><button id="boton-ingresar" onclick="ingresarNombre()">Ingresar</button></span>
         </section>
 
         <section id="sect-sobre-nosotros">    
@@ -84,5 +84,5 @@
         <p>&copy; 2025 Bianucci & De Bella.</p>
     </footer>
 </body>
-<script src="js/main.js" defer></script>
+<script type="module" src="js/main.js" defer></script>
 </html>
