--- a/tpIntegradorFront/index.html
+++ b/tpIntegradorFront/index.html
@@ -84,10 +84,5 @@
         <p>&copy; 2025 Bianucci & De Bella.</p>
     </footer>
 </body>
-<<<<<<< HEAD:tpIntegradorFront/index.html
-<script src="js/main.js" defer></script>
+<script type="module" src="js/main.js" defer></script>
 </html>
-=======
-<script src="js/main.js"></script>
-</html>
->>>>>>> dabd92d699ad190ab88fccb1228300efe6e30096:index.html
