modified:   tpIntegradorFront/js/listarProductos.js 	modified:   tpIntegradorFront/listarProductos.html

--- a/tpIntegradorFront/listarProductos.html
+++ b/tpIntegradorFront/listarProductos.html
@@ -40,7 +40,7 @@
     </header>
     
     <main>
-        <h2 class="titulo-productos">Nuestros Productos</h2>
+        <h2 class="mensaje-bienvenida">Nuestros Productos</h2>
         
         <div class="separador-productos-carrito">
             <div class="contenedor-productos" id="seccion-productos">  </div>
