--- a/tpIntegradorFront/listarProductos.html
+++ b/tpIntegradorFront/listarProductos.html
@@ -50,6 +50,7 @@
         
     </main>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/3.0.3/jspdf.umd.min.js"></script>
     <script src="./js/listarProductos.js" defer></script>
 
     <footer>
