Agregue barra de busqueda

--- a/tpIntegradorFront/productos.html
+++ b/tpIntegradorFront/productos.html
@@ -25,12 +25,16 @@
             <div id="menu-toggle">☰</div>
 
             <!-- Menú escritorio -->
+            <div class="barra-de-busqueda"> 
+                <input type="text" id="busqueda" placeholder="¿Qué producto estás buscando?">
+            </div>
+
             <div id="div-ul-li">
                 <ul>
                     <li><a href="index.html">Inicio</a></li>                 
                 </ul>
             </div>
-
+        
             <!-- Menú móvil // Posibilidad de enganchar un boton que muestre el carrito, desplegable. -->
             <div id="menu-links">
             <ul>
