modified:   tpIntegradorFront/index.html

--- a/tpIntegradorFront/index.html
+++ b/tpIntegradorFront/index.html
@@ -68,8 +68,8 @@
         <section id="sect-sobre-nosotros">
             <h2>¿Quienes somos?</h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus quae at enim sint nisi, 
-                quis minima odio cupiditate natus vitae veritatis quas dolore et itaque quaerat adipisci perspiciatis ea? Consectetur.
+                Somos una empresa dedicada a la venta de licencias digitales para software de todo tipo. 
+                Nuestro objetivo es brindar a nuestros clientes acceso rápido y seguro a las mejores herramientas digitales del mercado
             </p>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam molestias eius minus placeat. 
@@ -81,8 +81,10 @@
 
         <section id="sect-como-comprar">
             <h2 id="titulo-como-comprar">¿Como comprar?</h2>
-            <span id="span-parrafo-como-comprar"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus quae at enim sint nisi, quis minima odio cupiditate natus vitae veritatis quas dolore et itaque quaerat adipisci perspiciatis ea? Consectetur. 
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure quaerat deleniti distinctio tempore ut delectus qui maxime necessitatibus magni officiis, vero nemo quisquam, quam eligendi ratione eos aperiam soluta illum!
+            <span id="span-parrafo-como-comprar"><p>
+                Comprar en PixelDisk es muy sencillo. Ingresa tu nombre, elegi los productos que vos quieras,
+                agregalos al carrito de compras y finaliza la compra, con tu ticket retiras y pagas.
+                ¡Y listo! Disfruta de tu nuevo software.
             </p></span>
         </section>
     </main> 
