modified:   tpIntegradorFront/index.html

--- a/tpIntegradorFront/index.html
+++ b/tpIntegradorFront/index.html
@@ -69,14 +69,8 @@
             <h2>¿Quienes somos?</h2>
             <p>
                 Somos una empresa dedicada a la venta de licencias digitales para software de todo tipo. 
-                Nuestro objetivo es brindar a nuestros clientes acceso rápido y seguro a las mejores herramientas digitales del mercado
+                Nuestro objetivo es brindar a nuestros clientes acceso rapido y seguro a las mejores herramientas digitales del mercado
             </p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam molestias eius minus placeat. 
-                Aut possimus voluptates eius eum atque placeat eaque nam perspiciatis. Laboriosam quaerat 
-                reprehenderit deserunt soluta a iure?
-            </p>
-            <img src="" alt="Imagen sobre nosotros">
         </section>
 
         <section id="sect-como-comprar">
