Le di nuevos estilos al front

--- a/tpIntegradorFront/productos.html
+++ b/tpIntegradorFront/productos.html
@@ -31,7 +31,7 @@
 
             <div id="div-ul-li">
                 <ul>
-                    <li><a href="index.html">Inicio</a></li>                 
+                    <li><a href="index.html" id="link-inicio">Inicio</a></li>                 
                 </ul>
             </div>
         
